# Invoice-App-T-U

./: .gitignore  README.md  docker-compose.yml
.planning/: CARRY-OVER-MANIFEST.md  HANDOFF.md  PRODUCT-BRIEF.md
.planning/archive/: HANDOFF-2026-07-13.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9a5403128344_initial_schema.py
backend/app/: main.py
backend/app/core/: arq_pool.py  config.py  database.py  deps.py  exceptions.py  logging_config.py  redis_client.py  security.py
backend/app/models/: __init__.py  _helpers.py  approval.py  audit.py  identity.py  invoice.py  mixins.py  property.py  vendor.py
backend/app/repositories/: __init__.py  audit.py  base.py  firm_user.py  firm_user_role.py  invoice.py  invoice_attachment.py  portfolio.py  property.py  vendor.py
backend/app/routers/: artifacts.py  audit.py  auth.py  invoice_intake.py  invoices.py  properties.py  vendors.py
backend/app/schemas/: audit.py  auth.py  intake.py  invoice.py  property.py  vendor.py
backend/app/services/: extraction.py  intake.py  property_matching.py  state_machines.py  validation.py  vendor_matching.py
backend/app/services/documents/: storage.py
backend/app/workers/: arq_worker.py
backend/tests/: conftest.py  test_api.py  test_extraction_parsers.py  test_intake_flow_api.py  test_intake_orchestration.py  test_repositories.py  test_state_machine.py  test_validation.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
(+56 files in other folders)
