[project]
name = "invoice-processing-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.29.*",
  "sqlalchemy[asyncio]==2.0.*",
  "asyncpg==0.29.*",
  "alembic==1.13.*",
  "pydantic-settings==2.*",
  "pyjwt==2.8.*",
  "pwdlib[bcrypt]==0.2.*",
  "arq==0.26.*",
  "redis==5.*",
  "httpx==0.27.*",
  "python-multipart",
  "aiofiles==23.*",
  "pypdf==6.*",  # page count + page-cap slicing only — no text extraction (decision 1)
  "anthropic==0.116.*",  # Claude extraction provider (decision 9)
  "azure-storage-blob==12.*",
  "azure-identity==1.*",
]

[project.optional-dependencies]
dev = [
  "pytest==8.*",
  "pytest-asyncio==0.23.*",
  "ruff==0.4.*",
  "pyright==1.1.*",
  "aiosqlite==0.20.*",
  "faker>=25.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "DTZ"]

[tool.setuptools.packages.find]
include = ["app*"]  # exclude tests/ from the installed package (flat-layout disambiguation)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
